# PlausiDen-ZKTLS

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml
zktls-core/: Cargo.toml
zktls-core/src/: lib.rs
zktls-notary/: Cargo.toml
zktls-notary/src/: error.rs  keys.rs  lib.rs  main.rs  server.rs  session.rs
zktls-templates/: Cargo.toml
zktls-templates/src/: lib.rs
zktls-verifier/: Cargo.toml
zktls-verifier/src/: lib.rs
