[package]
name = "zktls-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for zkTLS identity verification: TLS session proofs, attestation formats, and selective disclosure primitives."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
