[package]
name = "zktls-notary"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Notary service that co-signs TLS sessions, enabling third-party attestation of web interactions without proxying traffic."

[dependencies]
zktls-core = { path = "../zktls-core" }
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
anyhow = "1"
tracing = "0.1"
