[package]
name = "zktls-verifier"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Verifies zkTLS proofs against templates, checking notary signatures and selective disclosure claims."

[dependencies]
zktls-core = { path = "../zktls-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
hex = "0.4"
